Modified CSS / Consolodated repeat text

--- a/challenge/Develop/index.html
+++ b/challenge/Develop/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +22,10 @@
                     <a href="#social-media-marketing"> Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
-    <main class="hero"></main>
+    <main class="hero">
+        <div class="hero" title="Photo of co-workers working at a table"></div>
     <div class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook, pens, coffee, computer, and magnifying glass all resting on a wooden table" class="float-left" />
@@ -48,6 +49,7 @@
             </p>
         </div>
     </div>
+</main>
     <div class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
