Changes a few more elements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="hero">
         <div class="hero" title="Photo of co-workers working at a table"></div>
-    <div class="content">
+    <figure>
         <section class="search-engine-optimization">
             <img src="./challenge/Develop/assets/images/search-engine-optimization.jpg" alt="Notebook, pens, coffee, computer, and magnifying glass all resting on a wooden table" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -41,14 +41,14 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./challenge/Develop/assets/images/social-media-marketing.jpg" alt="Group of people sitting at table. Table is full of bright signs representing interations on social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </figure>
 </main>
     <div class="benefits">
         <aside class="benefit-lead">
@@ -66,13 +66,13 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
-        <div class="benefit-cost">
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./challenge/Develop/assets/images/cost-management.png" alt="Image of a gear surrounded by coins with dollar signs.">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </section>
     </div>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
